--- a/package.json
+++ b/package.json
@@ -7,5 +7,18 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "nodemailer": "^6.9.13"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+  "name": "Kismatapp",
+  "version": "1.0.0",
+  "main": "Kismatapp.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
