--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 2130
 
-MONGO_URL = mongodb+srv://Anurag:Qwert12345@@cluster0.gu6bobo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL = mongodb+srv://anuragpandey21193:I47wcGyJf0PaVgrU@cluster0.pm5dexi.mongodb.net/?retryWrites=true&w=majority&appName=KismatProperty
 
 
