--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
